<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


<androidx.appcompat.widget.Toolbar

    android:id="@+id/toolbar_login"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    app:title="      Log In"
    app:titleTextColor="#000000" />

    <EditText

        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar_login"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="20dp"
        android:drawablePadding="10dp"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:paddingBottom="20dp">


    </EditText>


<EditText

    android:id="@+id/password"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/email"
    android:layout_marginLeft="20dp"
    android:layout_marginTop="11dp"
    android:layout_marginRight="20dp"
    android:drawablePadding="10dp"
    android:paddingBottom="20dp"
    android:hint="Password"
    android:inputType="textPassword" />

<TextView

    android:id="@+id/forgot_password"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/password"
    android:layout_marginLeft="20dp"
    android:layout_marginTop="25dp"
    android:text="Forgot Password"
    android:textColor="#8F8686"
    android:textSize="15dp" />
    <Button

        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/forgot_password"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:background="#00008b"
        android:text="Log In"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="20dp" />

    <Button
        android:id="@+id/btnRegisterView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_button"
        android:layout_marginStart="87dp"
        android:layout_marginTop="35dp"
        android:layout_toEndOf="@+id/remember_password"
        android:text="Register" />

    <RadioButton

    android:id="@+id/remember_password"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/login_button"
    android:layout_marginTop="40dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:text="Remember Password"
    android:textSize="12dp"
    android:checked="false"/>


</RelativeLayout>
